# borgmatic-binary

./: .gitignore  Dockerfile  Dockerfile.pyinstaller  README.md  Taskfile.yml  pyinstaller.spec  pyproject.toml
