[tool.poetry]
name = "borgmatic-binary"
version = "0.0.1"
description = "Provides binary releases for Borgmatic"
authors = ["Dani Hodovic <dani.hodovic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
borgmatic = "^1.5.13"
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
